--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@ scale=1.0">
 <div class="container">
 <div class="inner">
 <div class="item">
-<img src="mops.jpg" alt="Mops" class="img">
+<img src="amyr.jpg" alt="Амурский тигр" class="img">
 <button class="btn" id="btn1">Амурский тигр</button>
 </div>
 <div class="item">
-<img src="Bernedoodle1.jpg" alt="Bern" class="img">
+<img src="kot.jpg" alt="Дальневосточный лесной кот" class="img">
 <button class="btn" id="btn2">Дальневосточный лесной кот</button>
 </div>
 <div class="item">
-<img src="bass.jpg" alt="bass" class="img">
+<img src="aist.jpg" alt="Черный аист" class="img">
 <button class="btn" id="btn3">Черный аист</button>
 </div>
 <div class="item">
-<img src="bass.jpg" alt="bass" class="img">
+<img src="byrevestnik.jpg" alt="Снежный буревестник" class="img">
 <button class="btn" id="btn4">Снежный буревестник</button>
 </div>
 <div class="item">
-<img src="bass.jpg" alt="bass" class="img">
+<img src="beluga.jpg" alt="Белуга" class="img">
 <button class="btn" id="btn5">Белуга</button>
 </div>
 <div class="item">
-<img src="bass.jpg" alt="bass" class="img">
+<img src="taimen.jpeg" alt="Таймень" class="img">
 <button class="btn" id="btn6">Таймень</button>
 </div>
 </div>
